workloads/stevenxie/rgv-frontend.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: rgv-frontend
  namespace: stevenxie
  labels:
    app: rgv-frontend

spec:
  selector:
    matchLabels:
      app: rgv-frontend
  template:
    metadata:
      labels:
        app: rgv-frontend
    spec:
      containers:
      - name: server
        image: stevenxie/rgv-frontend:0.1.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 10Mi
          limits:
            cpu: 100m
            memory: 100Mi
