workloads/stevenxie/screechboi.deploy.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: screechboi
  namespace: default
  labels:
    app: screechboi
  annotations:
    fluxcd.io/automated: "true"
    filter.fluxcd.io/app: regexp:^0(\.[0-9]+){2} # 0.x.x...

spec:
  selector:
    matchLabels:
      app: screechboi
  template:
    metadata:
      labels:
        app: screechboi
    spec:
      containers:
      - name: app
        image: stevenxie/screechboi:0.2.0
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /root/.config
        resources:
          requests:
            cpu: 5m
            memory: 25Mi
          limits:
            cpu: 75m
            memory: 100Mi
      volumes:
      - name: config
        secret:
          secretName: screechboi
