workloads/stevenxie/api-v4.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: api-v4
  namespace: stevenxie
  labels:
    app: api
    version: v4

spec:
  selector:
    app: api
    version: v4
  ports:
    - name: http
      port: 80
      targetPort: http
