workloads/stevenxie/lattice-api.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: lattice-api
  namespace: stevenxie
  labels:
    app: lattice
    component: api

spec:
  selector:
    app: lattice
    component: api
  ports:
    - name: http
      port: 80
      targetPort: http
