workloads/stevenxie/rgv-api.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: rgv-api
  namespace: stevenxie
  labels:
    app: rgv-api

spec:
  selector:
    app: rgv-api
  ports:
    - name: http
      port: 80
      targetPort: http
