workloads/stevenxie/api-v2.routes.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: api-v2
  namespace: stevenxie

spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`api.stevenxie.me`) && Path(`/v2`)
      kind: Rule
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: api-v2-redirect
    - match: Host(`api.stevenxie.me`) && PathPrefix(`/v2/`)
      kind: Rule
      services:
        - name: api-v2
          port: 80
      middlewares:
        - name: api-v2-cors
        - name: api-v2-strip-prefix
  tls:
    secretName: tls-stevenxie-me

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: api-v2-redirect
  namespace: stevenxie

spec:
  redirectRegex:
    regex: ^https://api.stevenxie.me/v2$
    replacement: https://api.stevenxie.me/v2/

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: api-v2-cors
  namespace: stevenxie

spec:
  headers:
    accessControlMaxAge: 5
    accessControlAllowHeaders:
      - Content-Type
    accessControlAllowMethods:
      - POST
    accessControlAllowOriginList:
      - https://stevenxie.me
    addVaryHeader: true

---

apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: api-v2-strip-prefix
  namespace: stevenxie

spec:
  stripPrefix:
    prefixes:
      - /v2
