workloads/stevenxie/traefik-dash.routes.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dash
  namespace: stevenxie

spec:
  entryPoints: ["websecure"]
  routes:
    - match: Host(`gateway.stevenxie.me`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: tls-stevenxie-me
