workloads/stevenxie/vaingogh.svc.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: vaingogh
  namespace: default
  labels:
    app: vaingogh

spec:
  selector:
    app: vaingogh
  ports:
    - name: http
      port: 3000
      targetPort: http

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: vaingogh
  namespace: default
  labels:
    app: vaingogh

spec:
  gateways:
    - stevenxie-me.istio-system
    - stevenxie-com.istio-system
  hosts:
    - go.stevenxie.me
    - go.stevenxie.com
  http:
    - match:
        - authority:
            exact: go.stevenxie.com
      redirect:
        authority: go.stevenxie.me
    - route:
        - destination:
            host: vaingogh
          headers:
            response:
              set:
                X-Service: vaingogh
